LITT Changelog:
===============

 * 2019-09-02: Improved story listings. Now avoids duplicates by default.
               * Use stng instead of bstng by default in stt listing. (Really no need for
                 bstng so far, it will only differ from stng if a story has different authors
                 in different books)
               * Link Stories using storyBooks or storyAuthors instead of bookStories unless both
                 are needed; that way we avoid duplicate rows for stories with multiple authors.
 * 2019-09-01: Change sort for bb so that it sorts by story (id) before author name.
 * 2019-08-30: Added virtual count columns for pseudonyms:
               * abcp - As abc with pseudonyms included for MainID
               * agcp - As agc with pseudonyms included for MainID
 * 2019-08-29: Now uses a switch for the action selection with constexpr action hashing!
               Code size decreased 12.5KB (VS2019) and should be faster too hopefully! 
               Smaller decrease on VS2017, less than 1KB, but was smaller already.
 * 2019-08-29: No need for m_endOfOption after last change!
 * 2019-08-28: OptionParser now allows empty option values (like -c) and separators at the end (=> eof).
 * 2019-08-28: OptionParser now uses std::string instead of std::stringstream.
 * 2019-08-28: OutputQuery now uses std::string instead of std::stringstream for building query.
 * 2019-08-28: addAuxTables now uses JOIN or LEFT JOIN depending on startTable.
 * 2019-08-28: Added more count virtual columns:
               * abc, abcr, agc - Author book count, with re-reads, and genre count
               * gbc, gac - Genre book count and author count
               * cbc, sebc, sobc - Category, series and source book count
               * lbc, obc - Language and original language book count
               (Renamed sr to sor)
               * ser - Average rating for series
 * 2019-08-28: Bug fix: If a column was used as second operand in WHERE then it was not